--- a/src/main/resources/Views/SignUp.fxml
+++ b/src/main/resources/Views/SignUp.fxml
@@ -34,31 +34,31 @@
             </font>
         </JFXButton>
 
-        <JFXButton fx:id="fanBTN" layoutX="142.0" layoutY="64.0" onAction="#allExtraFieldsOff" prefHeight="37.0" prefWidth="59.0" styleClass="d" stylesheets="@Landing.css" text="Fan" textFill="#2c9e5b">
+        <JFXButton fx:id="fanBTN" layoutX="142.0" layoutY="64.0" onAction="#typeFan" prefHeight="37.0" prefWidth="59.0" styleClass="d" stylesheets="@Landing.css" text="Fan" textFill="#2c9e5b">
             <font>
                 <Font name="System Bold" size="16.0" />
             </font>
         </JFXButton>
 
-        <JFXButton fx:id="teamOwnerBTN" layoutX="393.0" layoutY="64.0" onAction="#allExtraFieldsOff" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="Team Owner" textFill="#2c9e5b">
+        <JFXButton fx:id="teamOwnerBTN" layoutX="393.0" layoutY="64.0" onAction="#typeTeamOwner" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="Team Owner" textFill="#2c9e5b">
             <font>
                 <Font name="System Bold" size="16.0" />
             </font>
         </JFXButton>
 
-        <JFXButton fx:id="managerBTN" layoutX="522.0" layoutY="64.0" onAction="#allExtraFieldsOff" prefHeight="37.0" prefWidth="104.0" styleClass="d" stylesheets="@Landing.css" text="Manager" textFill="#2c9e5b">
+        <JFXButton fx:id="managerBTN" layoutX="522.0" layoutY="64.0" onAction="#typeManager" prefHeight="37.0" prefWidth="104.0" styleClass="d" stylesheets="@Landing.css" text="Manager" textFill="#2c9e5b">
             <font>
                 <Font name="System Bold" size="16.0" />
             </font>
         </JFXButton>
 
-        <JFXButton fx:id="administratorBTN" layoutX="632.0" layoutY="64.0" onAction="#typeManagement" prefHeight="37.0" prefWidth="146.0" styleClass="d" stylesheets="@Landing.css" text="Administrator" textFill="#2c9e5b">
+        <JFXButton fx:id="administratorBTN" layoutX="632.0" layoutY="64.0" onAction="#typeAdministrator" prefHeight="37.0" prefWidth="146.0" styleClass="d" stylesheets="@Landing.css" text="Administrator" textFill="#2c9e5b">
             <font>
                 <Font name="System Bold" size="16.0" />
             </font>
         </JFXButton>
 
-        <JFXButton fx:id="associationRepresentativeBTN" layoutX="782.0" layoutY="64.0" onAction="#typeManagement" prefHeight="37.0" prefWidth="237.0" styleClass="d" stylesheets="@Landing.css" text="Association Representative" textFill="#2c9e5b">
+        <JFXButton fx:id="associationRepresentativeBTN" layoutX="782.0" layoutY="64.0" onAction="#typeAssociationRepresentative" prefHeight="37.0" prefWidth="237.0" styleClass="d" stylesheets="@Landing.css" text="Association Representative" textFill="#2c9e5b">
             <font>
                 <Font name="System Bold" size="16.0" />
             </font>
