--- a/src/main/resources/Views/Landing.fxml
+++ b/src/main/resources/Views/Landing.fxml
@@ -55,7 +55,7 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </JFXButton>
-            <JFXButton accessibleRole="PARENT" layoutX="909.0" layoutY="19.0" onAction="#goToLogin" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="LogIn" textFill="WHITE" AnchorPane.rightAnchor="150.0">
+            <JFXButton fx:id="logInBTN" accessibleRole="PARENT" layoutX="909.0" layoutY="19.0" onAction="#goToLogin" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="LogIn" textFill="WHITE" AnchorPane.rightAnchor="150.0">
                <graphic>
                   <FontAwesomeIcon fill="#bbe0e0" glyphName="USER" size="1.5em" />
                </graphic>
