--- a/src/main/resources/Views/SignUp.fxml
+++ b/src/main/resources/Views/SignUp.fxml
@@ -16,11 +16,17 @@
                 <Font name="System Bold" size="20.0" />
             </font></Label>
 
+    <JFXButton fx:id="refereeBTN" layoutX="43.0" layoutY="64.0" onAction="#typeReferee" prefHeight="37.0" prefWidth="86.0" styleClass="d" stylesheets="@Landing.css" text="Referee" textFill="#2c9e5b">
+        <font>
+            <Font name="System Bold" size="16.0" />
+        </font>
+    </JFXButton>
+<!--
         <JFXButton fx:id="refereeBTN" layoutX="43.0" layoutY="64.0" onAction="#typeReferee" prefHeight="37.0" prefWidth="86.0" styleClass="d" stylesheets="@Landing.css" text="Referee" textFill="#2c9e5b">
             <font>
                 <Font name="System Bold" size="16.0" />
             </font>
-        </JFXButton>
+        </JFXButton>-->
 
         <JFXButton fx:id="coachBTN" layoutX="305.0" layoutY="64.0" onAction="#typeCoach" prefHeight="37.0" prefWidth="79.0" styleClass="d" stylesheets="@Landing.css" text="Coach" textFill="#2c9e5b">
             <font>
@@ -85,35 +91,35 @@
             </font></Label>
 
 
-        <Label fx:id="emailLable" layoutX="417.0" layoutY="205.0" prefHeight="27.0" prefWidth="52.0" text="Email" />
+        <Label fx:id="emailLabel" layoutX="417.0" layoutY="205.0" prefHeight="27.0" prefWidth="52.0" text="Email" />
         <TextField fx:id="emailTF" layoutX="469.0" layoutY="205.0" prefHeight="0.0" prefWidth="152.0" />
 
-        <Label fx:id="usernameLable" layoutX="43.0" layoutY="260.0" prefHeight="27.0" prefWidth="86.0" text="Username" />
+        <Label fx:id="usernameLabel" layoutX="43.0" layoutY="260.0" prefHeight="27.0" prefWidth="86.0" text="Username" />
         <TextField fx:id="usernameTF" layoutX="135.0" layoutY="260.0" prefHeight="0.0" prefWidth="170.0" />
 
         <TextField fx:id="fullnameTF" layoutX="135.0" layoutY="211.0" prefHeight="0.0" prefWidth="224.0" />
-        <Label fx:id="fullnameLable" layoutX="43.0" layoutY="211.0" prefHeight="27.0" prefWidth="86.0" text="Full Name" />
+        <Label fx:id="fullnameLabel" layoutX="43.0" layoutY="211.0" prefHeight="27.0" prefWidth="86.0" text="Full Name" />
 
-        <Label fx:id="passwordLable" layoutX="374.0" layoutY="260.0" prefHeight="27.0" prefWidth="86.0" text="Password" />
+        <Label fx:id="passwordLabel" layoutX="374.0" layoutY="260.0" prefHeight="27.0" prefWidth="86.0" text="Password" />
         <PasswordField fx:id="passwordTF" layoutX="460.0" layoutY="260.0" prefHeight="0.0" prefWidth="170.0" />
 
 
 
-        <Label fx:id="birthdateLable" layoutX="384.0" layoutY="340.0" prefHeight="27.0" prefWidth="86.0" text="Birthdate" />
+        <Label fx:id="birthdateLabel" layoutX="384.0" layoutY="340.0" prefHeight="27.0" prefWidth="86.0" text="Birthdate" />
         <DatePicker fx:id="birthdateDP" layoutX="450.0" layoutY="341.0" prefHeight="0.0" prefWidth="146.0" />
 
-        <Label fx:id="courtRoleLable" layoutX="43.0" layoutY="340.0" prefHeight="27.0" prefWidth="86.0" text="Court Role" />
+        <Label fx:id="courtRoleLabel" layoutX="43.0" layoutY="340.0" prefHeight="27.0" prefWidth="86.0" text="Court Role" />
         <ChoiceBox fx:id="playerCourtRoleCB" layoutX="120.0" layoutY="340.0" prefHeight="0.0" prefWidth="172.0" />
 
-        <Label fx:id="teamRoleLable" layoutX="43.0" layoutY="340.0" prefHeight="27.0" prefWidth="104.0" text="Team Role" />
+        <Label fx:id="teamRoleLabel" layoutX="43.0" layoutY="340.0" prefHeight="27.0" prefWidth="104.0" text="Team Role" />
         <ChoiceBox fx:id="coachTeamRoleCB" layoutX="120.0" layoutY="340.0" prefHeight="0.0" prefWidth="172.0" />
 
-        <Label fx:id="qualificationLable" layoutX="43.0" layoutY="340.0" prefHeight="27.0" prefWidth="104.0" text="Qualification" />
+        <Label fx:id="qualificationLabel" layoutX="43.0" layoutY="340.0" prefHeight="27.0" prefWidth="104.0" text="Qualification" />
         <ChoiceBox fx:id="refereeQualificationCB" layoutX="140.0" layoutY="340.0" prefHeight="0.0" prefWidth="172.0" />
 
 
 
-        <Label fx:id="managePassLable" layoutX="46.0" layoutY="340.0" prefHeight="27.0" prefWidth="192.0" text="Management Password" />
-        <TextField fx:id="managePassTF" layoutX="200.0" layoutY="340.0" prefHeight="0.0" prefWidth="152.0" />
+        <Label fx:id="managePassLabel" layoutX="46.0" layoutY="340.0" prefHeight="27.0" prefWidth="192.0" text="Management Password" />
+        <PasswordField fx:id="managePassTF" layoutX="200.0" layoutY="340.0" prefHeight="0.0" prefWidth="152.0" />
 
 </AnchorPane>
