--- a/src/main/resources/Views/addTeamPage.fxml
+++ b/src/main/resources/Views/addTeamPage.fxml
@@ -1,18 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
 <?import com.jfoenix.controls.JFXButton?>
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.effect.Blend?>
-<AnchorPane prefHeight="800.0" prefWidth="1176.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UILayer.Controllers.LeaguesController">
+<?import javafx.scene.text.Text?>
+
+<AnchorPane prefHeight="800.0" prefWidth="1176.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UILayer.Controllers.TeamsController">
     <children>
+
         <fx:include fx:id="navBar" source="Landing.fxml" />
-        <JFXButton layoutX="387.0" layoutY="244.0" ripplerFill="#dc6464" stylesheets="@Landing.css" text="THIS IS team page creator" />
+        <TextField fx:id="choosenNation" layoutX="420.0" layoutY="163.0" prefWidth="150.0" />
+        <TextField fx:id="choosenHistory" layoutX="420.0" layoutY="223.0" prefWidth="150.0" />
+
+        <Pane layoutX="195.0" layoutY="148.0" prefHeight="46.0" prefWidth="191.0" style="-fx-background-color: #9cff64;-fx-border-color: black;">         <children>
+            <JFXTextField alignment="CENTER" promptText="please choose the nation of the team" unFocusColor="BLACK">
+                <font>
+                    <Font name="System Bold" size="15.0" />
+                </font>
+            </JFXTextField>
+        </children></Pane>
+        <Pane layoutX="195.0" layoutY="213.0" prefHeight="46.0" prefWidth="191.0" style="-fx-background-color: #9cff64;-fx-border-color: black;">
+            <children>
+                <JFXTextField alignment="CENTER" promptText="please write about the team history" unFocusColor="BLACK">
+                    <font>
+                        <Font name="System Bold" size="15.0" />
+                    </font>
+                </JFXTextField>
+            </children></Pane>
+        <Pane layoutX="193.0" layoutY="338.0" prefHeight="46.0" prefWidth="191.0" style="-fx-background-color: #9cff64;-fx-border-color: black;">
+            <children>
+                <JFXButton fx:id="submit" onAction="#createTeamPage" prefHeight="131.0" prefWidth="191.0" style="-fx-background-color: #393eff; -fx-border-color: black;" text="submit">
+                    <font>
+                        <Font name="System Bold" size="24.0" />
+                    </font>
+                </JFXButton>
+            </children></Pane>
+        <Text layoutX="424.0" layoutY="124.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CREATE TEAM PAGE" textAlignment="CENTER" wrappingWidth="339.79999999999984">
+            <font>
+                <Font name="System Bold" size="24.0" />
+            </font>
+        </Text>
+
+
     </children>
 </AnchorPane>
