--- a/src/main/resources/Views/MyApp.fxml
+++ b/src/main/resources/Views/MyApp.fxml
@@ -13,9 +13,14 @@
             <Font name="System Bold" size="35.0" />
          </font>
       </Text>
-      <Button fx:id="createNewTeamButton" layoutX="759.0" layoutY="217.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="143.0" text="create new team" visible="false"/>
+      <Button fx:id="createNewTeamButton" layoutX="759.0" layoutY="217.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="143.0" text="create new team" onAction="#openNewTeam" visible="false"/>
       <Button fx:id="initNewSeasonButton" layoutX="265.0" layoutY="219.0" mnemonicParsing="false" onAction="#openAddSeason" prefHeight="47.0" prefWidth="143.0" text="init new season" visible="false"/>
-      <Button fx:id="mpProfileButton" layoutX="514.0" layoutY="351.0" mnemonicParsing="false" onAction="#goToProfile" prefHeight="47.0" prefWidth="143.0" text="my profile" />
+        <Button fx:id="openTeamPage" layoutX="500.0" layoutY="221.0" mnemonicParsing="false" onAction="#openTeamPage" prefHeight="47.0" prefWidth="143.0" text="open team page" visible="false"/>
+        <Button fx:id="openPlayerPage" layoutX="265.0" layoutY="280.0" mnemonicParsing="false" onAction="#openPlayerPage" prefHeight="47.0" prefWidth="143.0" text="open player page" visible="false"/>
+        <Button fx:id="openCoachPage" layoutX="759.0" layoutY="280.0" mnemonicParsing="false" onAction="#openCoachPage" prefHeight="47.0" prefWidth="143.0" text="open coach page" visible="false"/>
+
+
+        <Button fx:id="mpProfileButton" layoutX="514.0" layoutY="351.0" mnemonicParsing="false" onAction="#goToProfile" prefHeight="47.0" prefWidth="143.0" text="my profile" />
     </children>
 
 </AnchorPane>
