--- a/src/main/resources/Views/addPlayerPage.fxml
+++ b/src/main/resources/Views/addPlayerPage.fxml
@@ -12,7 +12,7 @@
     <children>
 
         <fx:include fx:id="navBar" source="Landing.fxml" />
-          <JFXButton fx:id="submit" layoutX="195.0" layoutY="352.0" onAction="#openPlayerPage" prefHeight="46.0" prefWidth="135.0" style="-fx-background-color: #393eff; -fx-border-color: black;" text="submit">
+          <JFXButton fx:id="submit" layoutX="195.0" layoutY="352.0"  prefHeight="46.0" prefWidth="135.0" style="-fx-background-color: #393eff; -fx-border-color: black;" text="submit">
               <font>
                   <Font name="System Bold" size="24.0" />
               </font>
