--- a/src/main/resources/Views/Landing.fxml
+++ b/src/main/resources/Views/Landing.fxml
@@ -10,11 +10,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1300.0" style="-fx-background-color: #bbe0e0;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UILayer.Controllers.LandingController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1300.0" style="-fx-background-color: #bbe0e0;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UILayer.Controllers.LandingController">
       <top>
           <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="1300.0" style="-fx-background-color: #160604;" BorderPane.alignment="CENTER">
               <children>
-                  <JFXButton accessibleRole="PARENT" layoutX="646.0" layoutY="19.0" onAction="#goToPlayers" prefHeight="34.0" prefWidth="95.0" styleClass="d" stylesheets="@Landing.css" text="Players" textFill="WHITE" AnchorPane.leftAnchor="650.0">
+                  <JFXButton accessibleRole="PARENT" layoutX="603.0" layoutY="18.0" onAction="#goToPlayers" prefHeight="34.0" prefWidth="95.0" styleClass="d" stylesheets="@Landing.css" text="Players" textFill="WHITE" AnchorPane.leftAnchor="603.0">
                       <graphic>
                           <FontAwesomeIcon fill="#bbe0e0" glyphName="MALE" size="1.5em" />
                       </graphic>
@@ -22,7 +22,7 @@
                   <Font size="16.0" />
                </font>
             </JFXButton>
-                  <JFXButton accessibleRole="PARENT" layoutX="773.0" layoutY="19.0" onAction="#goToCoaches" prefHeight="38.0" prefWidth="113.0" styleClass="d" stylesheets="@Landing.css" text="Coaches" textFill="WHITE" AnchorPane.leftAnchor="775.0">
+                  <JFXButton accessibleRole="PARENT" layoutX="698.0" layoutY="18.0" onAction="#goToCoaches" prefHeight="38.0" prefWidth="113.0" styleClass="d" stylesheets="@Landing.css" text="Coaches" textFill="WHITE" AnchorPane.leftAnchor="698.0">
                       <graphic>
 
                             </graphic>
@@ -33,7 +33,7 @@
                   <Font size="16.0" />
                </font>
             </JFXButton>
-                  <JFXButton accessibleRole="PARENT" layoutX="516.0" layoutY="18.0" onAction="#goToTeams" prefHeight="28.0" prefWidth="113.0" styleClass="d" stylesheets="@Landing.css" text="Teams" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="500.0">
+                  <JFXButton accessibleRole="PARENT" layoutX="490.0" layoutY="19.0" onAction="#goToTeams" prefHeight="28.0" prefWidth="113.0" styleClass="d" stylesheets="@Landing.css" text="Teams" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="490.0">
                       <graphic>
                           <FontAwesomeIcon fill="#bbe0e0" fontSmoothingType="LCD" glyphName="GROUP" size="1.5em" />
                       </graphic>
@@ -41,7 +41,7 @@
                   <Font size="16.0" />
                </font>
             </JFXButton>
-                  <JFXButton accessibleRole="PARENT" alignment="CENTER" layoutX="375.0" layoutY="18.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#goToLeagues" prefHeight="38.0" prefWidth="108.0" styleClass="d" stylesheets="@Landing.css" text="Leagues" textFill="WHITE" AnchorPane.leftAnchor="375.0">
+                  <JFXButton accessibleRole="PARENT" alignment="CENTER" layoutX="375.0" layoutY="18.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#goToLeagues" prefHeight="38.0" prefWidth="115.0" styleClass="d" stylesheets="@Landing.css" text="Leagues" textFill="WHITE" AnchorPane.leftAnchor="375.0">
                       <graphic>
                           <FontAwesomeIcon fill="#bbe0e0" glyphName="FUTBOL_ALT" size="1.5em" />
                       </graphic>
@@ -54,7 +54,7 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="logInBTN" accessibleRole="PARENT" layoutX="909.0" layoutY="19.0" onAction="#goToLogin" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="LogIn" textFill="WHITE" AnchorPane.rightAnchor="150.0">
+            <JFXButton fx:id="logInBTN" accessibleRole="PARENT" layoutX="909.0" layoutY="19.0" onAction="#goToLogin" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="LogIn" textFill="WHITE" visible="true" AnchorPane.rightAnchor="150.0">
                <graphic>
                   <FontAwesomeIcon fill="#bbe0e0" glyphName="USER" size="1.5em" />
                </graphic>
@@ -62,7 +62,7 @@
                   <Font name="System Bold" size="16.0" />
                </font>
             </JFXButton>
-            <JFXButton id="signUpBtn" fx:id="signUpBtn" accessibleRole="PARENT" layoutX="1040.0" layoutY="19.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#goToSignUp" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="SignUp" textFill="WHITE" AnchorPane.rightAnchor="16.0">
+            <JFXButton id="signUpBtn" fx:id="signUpBtn" accessibleRole="PARENT" layoutX="1040.0" layoutY="19.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#goToSignUp" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="SignUp" textFill="WHITE" visible="true" AnchorPane.rightAnchor="16.0">
                <graphic>
                   <FontAwesomeIcon fill="#bbe0e0" glyphName="USER_PLUS" size="1.5em" />
                </graphic>
@@ -78,7 +78,7 @@
                   <Font name="System Bold" size="16.0" />
                </font>
             </JFXButton>
-            <JFXButton id="profileButton" fx:id="profileButton" layoutX="1030.0" layoutY="19.0" onAction="#goToProfile" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="Omerh" textFill="WHITE" visible="false" AnchorPane.rightAnchor="150.0">
+            <JFXButton id="profileButton" fx:id="profileButton" layoutX="932.0" layoutY="19.0" onAction="#goToProfile" prefHeight="37.0" prefWidth="104.0" styleClass="d" stylesheets="@Landing.css" text="Omerh" textFill="WHITE" visible="false" AnchorPane.rightAnchor="248.0">
                <graphic>
                   <FontAwesomeIcon fill="#bbe0e0" glyphName="USER" size="1.5em" />
                </graphic>
@@ -86,14 +86,22 @@
                   <Font name="System Bold" size="16.0" />
                </font>
             </JFXButton>
-            <JFXButton id="notfication" fx:id="notification" layoutX="1013.0" layoutY="19.0" prefHeight="38.0" prefWidth="150.0" styleClass="d" stylesheets="@Landing.css" text="Notifications" textFill="WHITE" visible="false" AnchorPane.rightAnchor="16.0">
+            <JFXButton id="notfication" fx:id="notification" layoutX="1022.0" layoutY="19.0" prefHeight="38.0" prefWidth="159.0" styleClass="d" stylesheets="@Landing.css" text=" Notifications" textFill="WHITE" visible="false" AnchorPane.rightAnchor="128.0">
                <graphic>
-                  <FontAwesomeIcon fill="#bbe0e0" glyphName="BELL" size="1.5em" />
+                  <FontAwesomeIcon fill="#bbe0e0" glyphName="BELL" size="1.3em" />
                </graphic>
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </JFXButton>
+                  <JFXButton id="signOut" fx:id="signOut" layoutX="1162.0" layoutY="18.0" onAction="#hideUserButton" prefHeight="38.0" prefWidth="122.0" styleClass="d" stylesheets="@Landing.css" text="Sign Out" textFill="WHITE" visible="false" AnchorPane.rightAnchor="14.0">
+                      <graphic>
+                          <FontAwesomeIcon fill="#bbe0e0" glyphName="SIGN_OUT" size="1.5em" />
+                      </graphic>
+                      <font>
+                          <Font name="System Bold" size="16.0" />
+                      </font>
+                  </JFXButton>
             <ImageView accessibleRole="PARENT" fitHeight="77.0" fitWidth="112.0" layoutX="14.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="14.0">
                <image>
                   <Image url="@soccerLogo.png" />
